--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -337,7 +337,7 @@
         android:layout_below="@+id/n25"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignRight="@+id/n28"
+        android:layout_alignEnd="@+id/n28" />
 
 </RelativeLayout>
