--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="a.atbash.MainActivity">
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
+        android:id="@+id/facebook_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -22,7 +22,7 @@
         android:text="שלבים קודמים"
         android:layout_width="160dp"
         android:layout_height="70dp"
-        android:onClick="GoToPreviousStagesActivity"
+        android:onClick="goToPreviousStagesActivity"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_alignLeft="@+id/button"
@@ -49,6 +49,7 @@
         android:text="טבלת השיאים"
         android:layout_width="160dp"
         android:layout_height="70dp"
+        android:onClick="goToLeaderboardsActivity"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_alignLeft="@+id/button2"
@@ -75,7 +76,7 @@
     <Button
         android:text="שחק עכשיו"
         android:layout_height="70dp"
-        android:onClick="GoToStageActivity"
+        android:onClick="goToStageActivity"
         android:id="@+id/button"
         android:layout_width="160dp"
         tools:background="@android:color/holo_blue_light"
