--- a/app/src/main/res/layout/previous_stages.xml
+++ b/app/src/main/res/layout/previous_stages.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/back"
-        android:onClick="GoToMainActivity"
+        android:onClick="goToMainActivity"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
