--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "ך"
+        android:textSize="22dp"
         android:id = "@+id/n25"
         android:background="@drawable/letter"
         android:textColor="@color/defaultLetterColor"
@@ -26,6 +27,7 @@
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "ץ"
+        android:textSize="22dp"
         android:id = "@+id/n26"
         android:background="@drawable/letter"
         android:textColor="@color/defaultLetterColor"
@@ -37,6 +39,7 @@
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "ף"
+        android:textSize="22dp"
         android:id = "@+id/n27"
         android:background="@drawable/letter"
         android:textColor="@color/defaultLetterColor"
@@ -48,6 +51,7 @@
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "."
+        android:textSize="22dp"
         android:background="@drawable/letter"
         android:textColor="@color/defaultLetterColor"
         android:id = "@+id/n28"
@@ -60,6 +64,7 @@
         android:layout_width="71dp"
         android:layout_height= "40dp"
         android:text = "->"
+        android:textSize="22dp"
         android:id = "@+id/n29"
         android:background="@drawable/letter"
         android:textColor="@color/defaultLetterColor"
@@ -83,6 +88,7 @@
             android:layout_height= "40dp"
             android:text = "ק"
             android:layout_marginLeft="9dp"
+            android:textSize="22dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n1"
@@ -92,6 +98,7 @@
             android:layout_height= "40dp"
             android:text = "ר"
             android:layout_marginLeft="-6dp"
+            android:textSize="22dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n2"
@@ -100,6 +107,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "א"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -109,6 +117,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ט"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -118,6 +127,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ו"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -127,6 +137,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ן"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -136,6 +147,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ם"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -145,6 +157,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "פ"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -154,6 +167,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ש"
+            android:textSize="22dp"
             android:layout_marginLeft="9dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -163,6 +177,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ד"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -172,6 +187,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ג"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -181,6 +197,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "כ"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -190,6 +207,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ע"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -199,6 +217,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "י"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -208,6 +227,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ח"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -217,6 +237,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ל"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -226,6 +247,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ז"
+            android:textSize="22dp"
             android:layout_marginLeft="9dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -235,6 +257,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ס"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -244,6 +267,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ב"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -253,6 +277,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ה"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -262,6 +287,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "נ"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -271,6 +297,7 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "מ"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
@@ -281,6 +308,7 @@
             android:layout_height= "40dp"
             android:text = "צ"
             android:layout_marginLeft="-6dp"
+            android:textSize="22dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n23"
@@ -289,28 +317,13 @@
             android:layout_width="38dp"
             android:layout_height= "40dp"
             android:text = "ת"
+            android:textSize="22dp"
             android:layout_marginLeft="-6dp"
             android:background="@drawable/letter"
             android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n24"
             />
     </GridLayout>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:maxLines="8"
-        android:lines="8"
-        android:id="@+id/clue"
-        tools:height="200dp"
-        android:gravity="right"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_above="@+id/checkButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="בדיקה"
@@ -376,24 +389,6 @@
         android:layout_toRightOf="@+id/checkButton"
         android:layout_toEndOf="@+id/checkButton" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:lines="8"
-        android:id="@+id/question"
-        android:gravity="right"
-        tools:height="200dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_above="@+id/clue"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/BACK" />
-
     <TextView
         android:text="שלב X"
         android:layout_width="180dp"
@@ -404,5 +399,22 @@
         android:gravity="center"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/question" />
+
+    <TextView
+        android:layout_width="330dp"
+        android:layout_height="170dp"
+        android:inputType="textMultiLine"
+        android:maxLines="8"
+        android:lines="8"
+        android:id="@+id/question"
+        android:textSize="26dp"
+        android:gravity="center"
+        android:focusable="false"
+        android:background="@drawable/rectangle_gray"
+        android:focusableInTouchMode="false"
+        android:layout_below="@+id/BACK"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="8dp" />
 
 </RelativeLayout>
