--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -375,8 +375,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:lines = "8"
+        android:maxLength="17"
         android:gravity="right"
         android:id="@+id/answer"
         tools:height="200dp"
