--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,18 +9,18 @@
     tools:context="a.atbash.MainActivity">
 
     <Button
-        android:text="הוראות"
+        android:id="@+id/button4"
         android:layout_width="160dp"
         android:layout_height="70dp"
-        android:id="@+id/button4"
-        android:background="@drawable/rectangle_blue"
-        android:textColor="@android:color/white"
-        android:textSize="22dp"
-        android:layout_below="@+id/button3"
         android:layout_alignLeft="@+id/button3"
         android:layout_alignStart="@+id/button3"
+        android:layout_below="@+id/button3"
         android:layout_marginTop="13dp"
-        android:onClick="goToInstarctions" />
+        android:background="@drawable/rectangle_blue"
+        android:onClick="goToInstractions"
+        android:text="הוראות"
+        android:textColor="@android:color/white"
+        android:textSize="22dp" />
 
     <Button
         android:text="טבלת השיאים"
