last changes before Bagrut

--- a/app/src/main/res/layout/instructions.xml
+++ b/app/src/main/res/layout/instructions.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
@@ -8,8 +7,8 @@
 
     <Button
         android:text="חזור"
-        android:layout_width="73dp"
-        android:layout_height="61dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:background="@drawable/circle_blue"
         android:id="@+id/button5"
         android:onClick="goToMainActivity"
@@ -29,7 +28,7 @@
 
 
     <TextView
-        android:text= "@string/basic_text1"
+        android:text= "@string/instructions1"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/textView3"
